// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineCheckbox Snapshot 1`] = `
<label
  className="css-9ncwx"
>
  <span
    className="css-1u8zmlt"
  >
    <input
      checked={true}
      className="css-1gyy7tz"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="css-3xhjcj"
    >
      <svg
        className="css-15h4xjp"
        data-file-name="Check.svg"
        data-svg-name="Check"
        data-testid="Check"
        height={20}
        style={
          {
            "fill": undefined,
          }
        }
        width={20}
      />
    </div>
  </span>
  <p
    className="css-1k6xh2w"
  >
    Outline Checkbox
  </p>
</label>
`;

exports[`OutlineCheckbox Snapshot 2`] = `
<label
  className="css-9ncwx"
>
  <span
    className="css-1u8zmlt"
  >
    <input
      className="css-1gyy7tz"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="css-3xhjcj"
    >
      <svg
        className="css-15h4xjp"
        data-file-name="Check.svg"
        data-svg-name="Check"
        data-testid="Check"
        height={20}
        style={
          {
            "fill": undefined,
          }
        }
        width={20}
      />
    </div>
  </span>
  <p
    className="css-1k6xh2w"
  >
    Outline Checkbox
  </p>
</label>
`;
